infra/traefik/forward-https-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-https-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
