infra/traefik/http-to-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-redirect
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-redirect-media
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
