infra/traefik/home-external-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-cluster
  namespace: traefik-system
spec:
  type: ExternalName
  externalName: 192.168.1.100
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-external-routing
  namespace: traefik-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "default-headers"
spec:
  ingressClassName: traefik
  rules:
  - host: "*.home.emc2.build"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-cluster
            port:
              number: 80
